--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
     <div class="app">
         <div id="imagem">
-            <img src="./supporte.png" alt="logomarca supporte">
+            <img src="supporte.png" alt="logomarca supporte">
         </div>
         <div class="screen">
             <label>Código Sku</label>
